test/modules/standard/FileSystem/filerator/bradc/testemptyglob.good
testemptyglob.chpl:15: error: halt reached - glob() has no matches, but is being zipped with something non-empty
